add main and controller suc khoe

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.40.zip}:\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar-1}:\
-    ${file.reference.poi-4.1.1.jar}
+    ${file.reference.poi-4.1.1.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
