--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.jcalendar-1.2.2.jar=../Lib/jcalendar-1.2.2.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=D:\\HUST\\Semester_5\\IT3180_CNPM\\Project\\Lib\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar-1=C:\\Users\\huyho\\Documents\\NetBeansProjects\\Lib\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar-2=E:\\NETBEAN\\Lib\\mysql-connector-java-5.1.40-bin.jar
 file.reference.mysql-connector-java-5.1.40.zip=D:\\HUST\\Semester_5\\IT3180_CNPM\\Project\\Lib\\mysql-connector-java-5.1.40.zip
 file.reference.poi-4.1.1.jar=C:\\Users\\huyho\\Documents\\NetBeansProjects\\Lib\\poi-4.1.1\\poi-4.1.1.jar
 file.reference.poi-bin-4.1.1-20191023.zip=..\\Lib\\poi-bin-4.1.1-20191023.zip
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.40.zip}:\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar-1}:\
     ${file.reference.poi-4.1.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
